--- a/package.json
+++ b/package.json
@@ -5,26 +5,31 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run test --prefix server && npm run test --prefix client",
     "setup": "npm install --prefix server && npm install --prefix client && npm install",
     "server:dev": "npm run start:dev --prefix server",
     "client:dev": "npm run dev --prefix client",
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
-    "lint": "npm run lint --prefix server && npm run lint --prefix client"
+    "lint": "npm run lint --prefix server && npm run lint --prefix client",
+    "format": "npm run format --prefix server && npm run format --prefix client"
   },
   "husky": {
     "hooks": {
-        "pre-commit": "lint-staged"
-      }
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
-      "*.{js,ts,tsx}": [
-        "npm run lint"
-      ]
+    "*.{js,ts,tsx}": [
+      "npm run lint"
+    ]
   },
   "author": "lily-law",
   "license": "ISC",
   "dependencies": {
     "concurrently": "^5.3.0"
+  },
+  "devDependencies": {
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.0"
   }
 }
