Apply npm run format for first time

--- a/package.json
+++ b/package.json
@@ -13,23 +13,10 @@
     "lint": "npm run lint --prefix server && npm run lint --prefix client",
     "format": "npm run format --prefix server && npm run format --prefix client"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,ts,tsx}": [
-      "npm run lint"
-    ]
-  },
   "author": "lily-law",
   "license": "ISC",
   "dependencies": {
     "concurrently": "^5.3.0"
   },
-  "devDependencies": {
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.0"
-  }
+  "devDependencies": {}
 }
