--- a/client/package.json
+++ b/client/package.json
@@ -11,24 +11,29 @@
         "test": "jest --passWithNoTests"
     },
     "dependencies": {
+        "@lilylaw/grid": "^3.0.0",
         "next": "10.0.0",
         "react": "17.0.1",
         "react-dom": "17.0.1",
         "uuid": "^8.3.1"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.12.1",
+        "@babel/preset-react": "^7.12.5",
+        "@types/jest": "^26.0.15",
         "@types/react": "^16.9.54",
         "@typescript-eslint/eslint-plugin": "^4.6.0",
         "@typescript-eslint/parser": "^4.6.0",
-        "babel-jest": "^26.6.1",
+        "babel-jest": "^26.6.3",
         "eslint": "^7.12.1",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-react": "^7.21.5",
         "eslint-plugin-react-hooks": "^4.2.0",
-        "jest": "^26.6.1",
+        "jest": "^26.6.3",
         "prettier": "^2.1.2",
+        "react-test-renderer": "^17.0.1",
         "typescript": "^4.0.5"
     }
 }
