--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@shelf/jest-mongodb": "^1.2.3",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
     "@types/mongoose": "^5.7.36",
@@ -45,7 +46,7 @@
     "eslint": "7.7.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
-    "jest": "26.4.2",
+    "jest": "^26.4.2",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "26.2.0",
@@ -55,6 +56,7 @@
     "typescript": "^3.7.4"
   },
   "jest": {
+    "preset": "@shelf/jest-mongodb",
     "moduleFileExtensions": [
       "js",
       "json",
